# TradingSystem

./: .cursor_tmp_suppressed_lines.txt  .env.example  .env.local.example  .gitignore  .kill_switch_state  ADD_API_KEYS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW_V2.md  AUCTION_STATUS.md  COMMIT_MESSAGE.txt  COMPREHENSIVE_LOG_CHECK.md  DATABASE_PERMISSIONS_FIX.md  DATABASE_SETUP_VERIFICATION.md  DEPLOYMENT_FIX.md  DEPLOYMENT_FIXED.md  DEPLOYMENT_LOG.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_SETUP_COMPLETE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_WORKFLOW.md  DEPLOY_FIX_TO_PRODUCTION.md  DIGITALOCEAN_DEPLOYMENT.md  DROPLET_NETWORK_SETUP.md  DROPLET_SETUP_COMPLETE.md  DROPLET_SETUP_INSTRUCTIONS.md  ENABLE_DASHBOARD.md  FIND_DASHBOARD.md  FIXES_NEEDED.md  FORAI.md  FUTURES_MAPPING_ISSUE.md  HETZNER_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INSTRUMENT_LOOKUP_FIX_V2.md  LIVE_TRADING_ACTIVE.md  LIVE_TRADING_READY.md  LIVE_TRADING_REVIEW.md  LOCAL_DEV.md  LOCAL_SERVICES_STOPPED.md  MONITORING_STATUS.md  (+67 more)
.do/: app.yaml
.streamlit/: config.toml
config/: production_v2.3.yaml
constraints/: runtime.txt
docs/: AUTONOMOUS_REBALANCER_ROLLOUT.md  CANDLE_DATA_AND_SUFFICIENT_COINS.md  CHOP_CANARY_ROLLOUT_CHECKLIST.md  CLEANUP_PROPOSAL.md  DASHBOARD_SPECIFICATION.md  DEPLOYMENT_WORKER_RUNCOMMAND.md  DEPLOY_WORKER_RUNCOMMAND.md  DIGITALOCEAN_APP_DEPLOYMENT.md  EXPERIMENT0_ROLLOUT_RUNBOOK.md  GO_LIVE_CHECKLIST.md  HISTORICAL_DATA_BACKFILL.md  LOG_TRACKING_AUCTION_AND_TRADES.md  OPERATIONS 2.md  OPERATIONS.md  OPS_HEALTH.md  PHASE2_PROFITABILITY_PLAN.md  POSITIONS_AND_ORDERS_FAQ.md  PRODUCTION_BLOCKERS.md  PRODUCTION_RUNTIME.md  REPLAY_RECORDING.md  ROOT_CAUSE_2026-02-11.md  ROUTINE_ANALYZE_RECENT_TRADING.md  RUNNER_CAPITAL_FIXES_INVARIANT_REVIEW.md  (+1 more)
(+490 files in other folders)
